fix: accessible contrast for sunburn-day theme

--- a/src/app.css
+++ b/src/app.css
@@ -264,11 +264,11 @@
 	--color-base-content: oklch(0.3079 0.1097 28.08);
 	--color-base-dots: oklch(0.8676 0.1561 87.34);
 	--color-primary: oklch(0.6309 0.2369 30.24);
-	--color-primary-content: oklch(0.337 0.1277 30.7);
+	--color-primary-content: oklch(0.2164 0.0754 30.1);
 	--color-secondary: oklch(0.6855 0.2033 37.98);
-	--color-secondary-content: oklch(0.3745 0.1239 37.14);
+	--color-secondary-content: oklch(0.3062 0.0971 39.04);
 	--color-accent: oklch(0.8201 0.1343 66.99);
-	--color-accent-content: oklch(0.4754 0.1132 58.1);
+	--color-accent-content: oklch(0.4356 0.102 59.67);
 	--color-neutral: oklch(0.3079 0.1097 28.08);
 	--color-neutral-content: oklch(0.9625 0.0476 90.06);
 	--color-info: oklch(0.7862 0.0638 74.62);
